# varsome-qa-assignment

./: .env.example  .gitignore  AUDIT.md  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
2/: index.html
2/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
2/data/test-cases/: 1304e9f460eb38c6.json  2f49eff7fc5d9772.json  4f832545b4c92d86.json  597b1c149487c6f1.json  cd77944181ad0093.json  ee2113c068f039e1.json  f994ae0a035f6a76.json
2/export/: influxDbData.txt  prometheusData.txt
2/history/: duration-trend.json  history-trend.json  history.json
2/widgets/: severity.json  status-chart.json  suites.json  summary.json
3/: index.html
3/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
3/data/test-cases/: 1c52e01dca34f940.json  (+4 more)
3/export/: influxDbData.txt  prometheusData.txt
3/history/: history.json
3/widgets/: duration.json  severity.json  summary.json
4/: index.html
4/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
4/export/: influxDbData.txt  prometheusData.txt
4/history/: history.json
4/widgets/: severity.json  status-chart.json  summary.json
5/: index.html
9/: index.html
config/: settings.py  test_data.py
locators/: locators.py
pages/: base_page.py  home_page.py  login_page.py  results_page.py  sample_info_modal.py
tests/: test_braf_v600e_classification.py  test_germline_classification.py  test_login.py  test_pipeline_demo.py
utils/: driver_factory.py
(+19 files in other folders)
