[project]
name = "varsome-braf-v600e-tests"
version = "1.0.0"
description = "UI regression suite verifying germline classification of BRAF:V600E (hg38) on VarSome."
requires-python = ">=3.10"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--html=reports/report.html",
    "--self-contained-html",
    "--alluredir=reports/allure-results",
]
markers = [
    "smoke: minimal critical-path verification",
    "regression: full regression coverage",
    "germline: germline classification scenarios",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s | %(levelname)-7s | %(name)s | %(message)s"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.black]
line-length = 100
target-version = ["py310"]
